# web

./: .gitignore  Cargo.toml  README.md  Rocket.toml
blog/: init.md  summer-event.md
md/: https.md  index.md  readme.md
src/: context.rs  db.rs  helpers.rs  lib.rs  main.rs  md_template.html  md_to_html.rs  util.rs
src/apis/: blog.rs  general_api.rs  hackernews.rs  mod.rs  nrk.rs  space_flight.rs
src/html/: base.rs  blog.rs  home.rs  mod.rs  render.rs  util.rs
src/server/: mod.rs
static/: style.css  upload.html
static/css/: hbs.css
static/html/: error_404.html  error_500.html  upload.html
templates/: footer.hbs  html.hbs  index.hbs  layout.hbs  nav.hbs  recent-md.hbs  tokei.hbs
