[package]
name = "web-torstein"
version = "0.1.0"
authors = ["Torstein Grindvik <rs@torste.in>"]
edition = "2018"

# NOTE: Rocket currently (0.4) requires nightly
# NOTE: Was required to set OPENSSL_DIR to "/usr/" before build worked.

[dependencies]
anyhow = "1"
glob = "0.3"
lol_html = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
names = "0.11"
rusqlite = "0.24"

[dependencies.reqwest]
version = "0.10"
# TODO: When rocket releases 0.5, go async
features = ["blocking"]

[dependencies.rocket]
version = "0.4"
features = ["tls"]

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["serve", "handlebars_templates"]