[package]
name = "hiho-templates"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
rocket = "0.5.0-rc.1"
stpl = "0.5"
futures = "0.3"
ammonia = "3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
serde_json = "1"
